--- a/index.html
+++ b/index.html
@@ -19,17 +19,7 @@
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                  </li>
                 </ul>
-                <form class="d-flex">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
               </div>
             </div>
           </nav>
@@ -39,7 +29,7 @@
                 <div class="row">
                 <div class="col-sm-4">
                     <div class = "d-flex justify-content-end">
-                    <img src="/images/img.png" class="img-thumbnail" alt="image of meeeeeee">
+                    <img src="../images/img.png" class="img-thumbnail" alt="image of meeeeeee">
                 </div>
                 </div>
             
